# Advent-of-Code

./: CMakeLists.txt  README
2023/day_1/src/: main.rs
2023/day_3/src/: main.cpp
2023/day_5/src/: main.cpp
2024/src/: day_1.cpp  day_2.cpp  day_3.cpp  day_4.cpp  day_6.cpp  day_7.cpp
day_1/src/: main.rs
day_2/src/: main.cpp
day_3/src/: main.cpp
day_4/src/: main.cpp
day_5/src/: main.cpp
day_6/src/: main.cpp
day_8/: CMakeLists.txt
day_8/src/: main.cpp
utils/: CMakeLists.txt  input.cpp  input.hpp
